--- a/Nettsiden/css/style.css
+++ b/Nettsiden/css/style.css
@@ -415,9 +415,20 @@ svg {
 
 
 #map-container {
-    text-align: center;
-    margin-top: 20px;
+    float: right;
+    margin-right: 10px;
+    width:60%;
+
 }
 
-
-
+#county-name-box {
+    position: absolute; /* Ensures it can follow the mouse pointer */
+    display: none; /* Initially hidden */
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    border-radius: 5px;
+    pointer-events: none;  /* Prevents the box from interfering with hover events */
+    font-size: 14px;
+    z-index: 1000;  /* Ensures the box appears above other content */
+}
