--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
 
 .navbar li {
     margin-left: 20px; /* Add space between nav items */
-    white-space: nowrap;
+    white-space: wrap;
 }
 .navbar a{
     color: white;
@@ -550,13 +550,19 @@ svg {
     }
     
     .overlay-text {
+        order: 3;
         left: 50%; /* Center the text horizontally */
         transform: translate(-10%, 20%); /* Adjust position to center properly */
     }
     .poverty-info-box{
+        order: 2;
         transform: translate(-180%, 80%);
         flex: 0.6;
         min-height: 280px;
+    }
+    svg {
+        order: 1;
+        margin: 0 auto;
     }
 
 
