--- a/css/style.css
+++ b/css/style.css
@@ -522,6 +522,24 @@ svg {
     }
 }
 @media (max-width: 768px) {/*IPHONE*/
+
+    main {
+        display: flex;
+        flex-direction: column; /* Stack elements vertically */
+        align-items: center;
+        justify-content: center;
+    }
+
+    #map-container {
+        width: 90%; /* Make the map container bigger */
+        max-width: 700px; /* Larger map for smaller screens */
+    }
+
+    svg {
+        max-width: 100%;
+        margin: 0 auto;
+    }
+
     .logo
     {
         font-size: 20px;
@@ -551,20 +569,16 @@ svg {
     
     .overlay-text {
         order: 3;
-        left: 50%; /* Center the text horizontally */
-        transform: translate(-15%, -5%); /* Adjust position to center properly */
+        text-align: center;
+        margin-top: 20px;
     }
     .poverty-info-box{
+        margin: 20px auto;
+        width: 90%;
         order: 2;
-        transform: translate(-180%, 80%);
-        flex: 0.6;
-        min-height: 280px;
+        text-align: center;
     }
-    svg {
-        order: 1;
-        margin: 0 auto;
-    }
-
+   
 
 }
 
